--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <![endif]-->
 
         <h1>Tales Baz</h1>
-        <i>Full Stack Developer & Caffeine Addicted</i>
+        <i>Software engineer & Caffeine Addicted</i>
 
         <a href="http://www.facebook.com/talesbaz"      class="fa fa-facebook"></a>
         <a href="http://www.twitter.com/talesbaz"       class="fa fa-twitter"></a>
